Move each operation type to own class